--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 
         <aside id="sidebar">
           {% if site.show_downloads %}
-            <a href="{{ site.github.zip_url }}" class="button">
+            <a href="link" class="button">
               <small>Download</small>
               .zip file
             </a>
