--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
 
         <aside id="sidebar">
           {% if site.show_downloads %}
-            <a href="link" class="button">
+            <a href="site.github.windows" class="button">
               <small>Download</small>
-              .zip file
+              windows rar file
             </a>
             <a href="{{ site.github.tar_url }}" class="button">
               <small>Download</small>
