--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,12 +40,15 @@
           {% if site.show_downloads %}
             <a href="site.github.windows" class="button">
               <small>Download</small>
-              windows rar file
+              windows rar
             </a>
-            <a href="{{ site.github.tar_url }}" class="button">
+            <a href="{{ site.github.linux }}" class="button">
               <small>Download</small>
-              .tar.gz file
+               linux .tar gz
             </a>
+          <a href="{{ site.github.macos }}" class="button">
+              <small>Download</small>
+               macos 7z
           {% endif %}
 
           {% if site.github.is_project_page %}
