--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,9 @@
               <small>Download</small>
               windows rar
             </a>
-            <a href="{{ site.github.linux }}" class="button">
+            <a href="{{ site.github.zip_linux }}" class="button">
               <small>Download</small>
-               linux .tar gz
+               linux .tar xz
             </a>
           <a href="{{ site.github.macos }}" class="button">
               <small>Download</small>
