--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,9 @@
               <small>Download</small>
                linux .tar xz
             </a>
-          <a href="{{ site.github.macos }}" class="button">
+          <a href="{{ site.github.zip_mac }}" class="button">
               <small>Download</small>
-               macos 7z
+               macos zip
           {% endif %}
 
           {% if site.github.is_project_page %}
